third_party/move/move-compiler-v2/tests/checking/naming/unbound_unqualified_function.exp

Diagnostics:
error: no function named `bar` found
  ┌─ tests/checking/naming/unbound_unqualified_function.move:3:9
  │
3 │         bar();
  │         ^^^^^

error: no function named `bar` found
  ┌─ tests/checking/naming/unbound_unqualified_function.move:4:17
  │
4 │         let x = bar();
  │                 ^^^^^
